<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/but_str1"
        android:textSize="25dp"
        android:layout_margin="20dp"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/but_str1"
        android:textSize="25dp"
        android:layout_margin="20dp"
        android:editable="false"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/but_str1"
        android:textSize="25dp"
        android:layout_margin="20dp"
        android:clickable="false"
        android:rotation="360"

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/text1"
            android:textSize="30sp"
        ></TextView>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/text2"
        android:textSize="20sp"
        android:textColor="#eda1a1"
        ></TextView>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/text3"
        android:textSize="20sp"
        android:typeface="serif"
        ></TextView>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/text4"
        android:textSize="20sp"
        android:textStyle="italic"
        ></TextView>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/text5"
        android:textSize="20sp"
        android:singleLine="ture"
        ></TextView>

    />
</LinearLayout>
