<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/but_str2"
        android:background="#a9f29f"
        android:textColor="#ffffff"
        android:textSize="25dp"
        android:layout_margin="20dp"
        />

    <Button
        android:id="@+id/button4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/but_str4"
        android:layout_margin="10dp"
        android:padding="40dp"
        android:background="#ffffff" />


    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="#0031e4" />


    <Button
        android:id="@+id/button2"
        android:layout_width="113dp"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:background="#e7c3f9"
        android:text="@string/but_str3"
        android:padding="10dp"
        android:textColor="#000000"
        android:textSize="18dp" />

</LinearLayout>
